--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^6.3.0"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.4.0"
   }
 }
